<resources>
    <string name="app_name">MAD_Practical4_20012021053</string>
    <string name="mainActivityTitle"><b>Intent Practical - 20012021053</b></string>
    <string name="mainActivityHeading">Welcome To My Application</string>
    <string name="webUrlText">Web URL</string>
    <string name="webUrlDescription">Browse any Website From Here, Just write the URL in Textbox Given Below and Press <b>Browse</b> Button.</string>
    <string name="BrowseText">Browse Website</string>
    <string name="callPhoneText">Call Phone Number</string>
    <string name="callPhoneDescription">Call anyone From Here, Just Dial any Phone Number in Textbox and To call Press on <b>Call Now</b> Button.</string>
    <string name="callBtnText">Call Now</string>
    <string name="callPhoneHintText">Phone Number</string>
    <string name="contactListText">Contact Lists</string>
    <string name="contactListDescription">Find your Contact From Here, Just Press <b>Find My Contact</b> Button.</string>
    <string name="contactListBtnText">Find Contact Number</string>
    <string name="callLogText">Contact Logs</string>
    <string name="callLogDescription">Find Call Logs From Here, Just Press <b>Find Call Logs</b> Button.</string>
    <string name="callLogHintText">Phone Number</string>
    <string name="callLogBtnText">Find Call Logs</string>
    <string name="galleryText">Gallery</string>
    <string name="galleryDescription">Open your Gallery From Here, Just Press <b>Open Gallery</b> Button.</string>
    <string name="galleryBtnText">Open Gallery</string>
    <string name="cameraText">Camera</string>
    <string name="cameraDescription">Open Your Camera From Here, Just Press <b>Open Camera</b> Button.</string>
    <string name="cameraBtnText">Open Camera</string>
    <string name="alarmText">Alarm</string>
    <string name="alarmDescription">Get all the Alarms you have Set, Just Press <b>Open Alarms</b> Button.</string>
    <string name="alarmBtnText">Open Alarms</string>
    <string name="homeActivityTitle"><b>Intent Practical - 20012021053</b></string>
    <string name="homeActivityHeading">Our Facilities</string>
    <string name="mainActivityDescription">In this, you will get Some facilities which are used in our Daily Life\nWe Will keep Adding New Faclities</string>
    <string name="facilitiesBtnText">Use Facilities</string>
    <string name="detailsText">Get Details of Your Input</string>
</resources>